# stargazer

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4792b5bddfdb_refactor_page_segments.py  9020e29455d1_base.py
stargazer/: entity.py  meta.py  models.py  segments.py  updaters.py
