[project]
name = "stargazer"
version = "dynamic"
authors = [
  { name="team starcup", email="204685920+little-meow-meow@users.noreply.github.com" },
]
description = "A tool for automatically synchronizing pages on the starcup wiki."
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/teamstarcup/stargazer"
Issues = "https://github.com/teamstarcup/stargazer/issues"

[build-system]
requires = [
    "hatchling",
    "mypy",
    "pywikibot >= 10.1.0",
    "ruamel.yaml >= 0.18.0",
    "sqlalchemy >= 2.0.0",
    "alembic >= 1.16.0",
    "python-dotenv >= 1.1.0",
]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
files = [
    'stargazer/**/*.py',
    'main.py',
]
exclude = [
    '^user-config.py$',
    '^user-password.py$',
]

[[tool.mypy.overrides]]
module = ["pywikibot.*"]
follow_untyped_imports = true
